--- a/jpashop/src/main/resources/application.yml
+++ b/jpashop/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create # app 실행 시점에 db 지우고 다시 생성
+      ddl-auto: update # app 실행 시점에 db 지우고 다시 생성
     properties:
       hibernate:
         # show_sql: true # logger 를 통해서 찍음
